<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/status"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/guide"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/tutorial"
        style="@style/font_roboto_din_medium"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/averagePanel"
        app:layout_constraintEnd_toStartOf="@+id/settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <ImageView
        android:id="@+id/settings"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="8dp"
        android:background="@drawable/settings"
        android:backgroundTint="?attr/editTextColor"
        app:layout_constraintBottom_toTopOf="@+id/averagePanel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guide"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:id="@+id/averagePanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/guide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/avg"
                android:includeFontPadding="false"
                style="@style/font_roboto_din_medium"
                android:textAlignment="center"
                android:textSize="12sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <EditText
            android:id="@+id/lastGPA"
            style="@style/font_roboto_din_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:inputType="numberDecimal"
            android:digits="0123456789."
            android:maxLength="5"
            android:textAlignment="center" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/hoursPanel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:layout_marginTop="8dp"
        android:paddingEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/averagePanel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RelativeLayout
            android:id="@+id/prevHoursLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CH"
                android:includeFontPadding="false"
                style="@style/font_roboto_din_medium"
                android:textAlignment="center"
                android:textSize="12sp"
                android:textStyle="bold"/>
        </RelativeLayout>
        <EditText
            android:id="@+id/lastHours"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:inputType="number"
            android:digits="0123456789"
            android:maxLength="3"
            android:textAlignment="center"
            style="@style/font_roboto_din_regular"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/labels"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hoursPanel"
        android:layoutDirection="ltr">

        <TextView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:paddingTop="7dp"
            android:text="@string/LM"
            style="@style/font_roboto_din_regular"
            android:textAlignment="center"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:paddingTop="7dp"
            android:textSize="15sp"
            android:text="@string/Hours"
            style="@style/font_roboto_din_regular"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/scrollView2"
            app:layout_constraintTop_toBottomOf="@+id/lastHours"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:paddingTop="7dp"
            android:text="@string/mark"
            style="@style/font_roboto_din_regular"
            android:textSize="15sp"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/scrollView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lastHours" />
    </LinearLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/coursesPanel"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:paddingBottom="16dp"
        app:layout_constraintTop_toBottomOf="@id/labels"
        app:layout_constraintBottom_toTopOf="@id/addCourse">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scrollbars="none"
            android:layout_margin="0.25dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
            <requestFocus ></requestFocus>
        </androidx.recyclerview.widget.RecyclerView>
        <View
            android:id="@+id/left_border"
            android:layout_width="0.25dp"
            android:layout_height="0dp"
            android:background="@color/black"
            app:layout_constraintEnd_toStartOf="@id/recycler"
            app:layout_constraintTop_toTopOf="@id/recycler"
            app:layout_constraintBottom_toBottomOf="@id/recycler"/>
        <View
            android:id="@+id/right_border"
            android:layout_width="0.25dp"
            android:layout_height="0dp"
            android:background="@color/black"
            app:layout_constraintStart_toEndOf="@id/recycler"
            app:layout_constraintTop_toTopOf="@id/recycler"
            app:layout_constraintBottom_toBottomOf="@id/recycler" />
        <View
            android:id="@+id/top_border"
            android:layout_width="0dp"
            android:layout_height="0.25dp"
            android:background="@color/black"
            app:layout_constraintEnd_toEndOf="@id/recycler"
            app:layout_constraintStart_toStartOf="@id/recycler"
            app:layout_constraintBottom_toTopOf="@id/recycler"/>
        <View
            android:id="@+id/bottom_border"
            android:layout_width="0dp"
            android:layout_height="0.25dp"
            android:background="@color/black"
            app:layout_constraintEnd_toEndOf="@id/recycler"
            app:layout_constraintStart_toStartOf="@id/recycler"
            app:layout_constraintTop_toBottomOf="@id/recycler"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/addCourse"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="3dp"
        android:background="@drawable/button_border3"
        android:text="@string/add"
        android:includeFontPadding="false"
        style="@style/font_roboto_din_medium"
        app:layout_constraintBottom_toTopOf="@+id/calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coursesPanel"
        app:layout_constraintVertical_bias="1" />

    <Button
        android:id="@+id/calculate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="3dp"
        android:background="@drawable/button_border3"
        android:text="@string/cal"
        android:includeFontPadding="false"
        style="@style/font_roboto_din_medium"
        android:enabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/clear"/>
    <Button
        android:id="@+id/clear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="5dp"
        android:text="@string/del"
        android:includeFontPadding="false"
        style="@style/font_roboto_din_medium"
        android:background="@drawable/button_border3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/calculate"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>